code-server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: code-server
spec:
  tls:
  - hosts:
    - code.boredotter.dev
    secretName: code-tls
  rules:
  - host: code.boredotter.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server
            port:
              number: 80
